Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 8.0.0
-
None
-
-
8c1cd7539c (qt-creator/qt-creator/9.0) 8c1cd7539c (qt-creator/qt-creator/master)
Description
If I right-click a file under a resource node, which lies deeper than one directory level...
...and delete it permanently...
..the file entry in the .qrc file gets properly removed, and the file is deleted from disk.
However, the removal from Git fails, because the working directory for the git command is missing one level.
10:50:35 Running in /home/alportal/dev/tqtc-qtc-super/qtcreator/src/plugins/qtsupport/images: /usr/bin/git rm --force qteventicon.png fatal: pathspec 'qteventicon.png' did not match any files The command "/usr/bin/git rm --force qteventicon.png" terminated with exit code 128.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-27172 Deleting files from project gives `git rm` error despite working
-
- Closed
-